--- a/i3/config.desktop
+++ b/i3/config.desktop
@@ -23,15 +23,13 @@ bindsym $mod+KP_Add      exec ~/.local/bin/brightness.sh $(~/.local/bin/i3-activ
 bindsym $mod+KP_Subtract exec ~/.local/bin/brightness.sh $(~/.local/bin/i3-active-monitor.sh) -10
 
 # autostart
-exec --no-startup-id polybar big
-exec --no-startup-id polybar small
+exec --no-startup-id MONITOR=$MON1 polybar big
+exec --no-startup-id MONITOR=$MON2 polybar small
 exec --no-startup-id bash -c "feh --bg-scale $(~/.local/bin/bing-wallpaper.sh)"
 
 include base.inc
 include startup.inc
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
 #bar {
 #        status_command i3status
 #}
