--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,7 +26,7 @@ alert = #A54242
 disabled = #707880
 
 [bar/big]
-monitor = DisplayPort-0
+monitor = ${env:MONITOR:}
 width = 100%
 height = 36pt
 radius = 6
@@ -55,7 +55,7 @@ bottom = true
 
 
 [bar/small]
-monitor = DisplayPort-1
+monitor = ${env:MONITOR:}
 width = 100%
 height = 44
 radius = 6
