--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -26,7 +26,7 @@ alert = #A54242
 disabled = #707880
 
 [bar/big]
-monitor = ${env:MONITOR:}
+monitor = ${env:MONITOR:DisplayPort-0}
 width = 100%
 height = 36pt
 radius = 6
@@ -55,7 +55,7 @@ bottom = true
 
 
 [bar/small]
-monitor = ${env:MONITOR:}
+monitor = ${env:MONITOR:DisplayPort-1}
 width = 100%
 height = 44
 radius = 6
